--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,8 @@
             <version>4.2.0</version>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.0-801.jdbc4</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
