--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/docker
 spring.datasource.username=docker
 spring.datasource.password=docker
 #spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.maximumPoolSize=8
+#spring.datasource.hikari.maximumPoolSize=8
